bug 11239 aligning text a little r=me
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10239 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/smartPlaylist.css
+++ b/app/skin/dialogs/smartPlaylist.css
@@ -122,3 +122,8 @@ sb-rating {
 .drawer-box {
   overflow-y:scroll !important;
 }
+
+.smart-condition-item-box > hbox,
+#textconditionbox {
+  -moz-box-align:center !important;
+}
